[package]
name = "cs2-sdk"
version = "1.23.0"
edition = "2024"
description = "CS2 SDK generator — offsets, signatures, schemas, and interfaces dumped externally from a live process."

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
heck = "0.5"
log = "0.4"
memflow = "0.2"
pelite = "0.10"
phf = { version = "0.13", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = "0.12"

[target.'cfg(windows)'.dependencies]
memflow-native = { git = "https://github.com/memflow/memflow-native" }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
strip = true
codegen-units = 1
